--- a/roles/cni/tasks/kubeconfig.yaml
+++ b/roles/cni/tasks/kubeconfig.yaml
@@ -1,17 +1,6 @@
-# - name: setting up kubeconfig
-#   shell: |
-#     kubectl config set-cluster techcrumble-k8s-hardway --certificate-authority=/var/lib/kubernetes/ca.pem --embed-certs=true --server=https://localhost:6443
-#     kubectl config set-credentials tc-admin --client-certificate=/var/lib/kubernetes/admin.pem --client-key=/var/lib/kubernetes/admin-key.pem
-#     kubectl config set-context tc-k8s-cluster --cluster=techcrumble-k8s-hardway --user=tc-admin
-#     kubectl config use-context tc-k8s-cluster
-#
-tasks: 
-  -  block:
-      - name: set the cluster 
-        command: kubectl config set-cluster techcrumble-k8s-hardway --certificate-authority=/var/lib/kubernetes/ca.pem --embed-certs=true --server=https://localhost:6443
-      - name: set the credentials
-        command: kubectl config set-credentials tc-admin --client-certificate=/var/lib/kubernetes/admin.pem --client-key=/var/lib/kubernetes/admin-key.pem
-      - name: set the context
-        command: kubectl config set-context tc-k8s-cluster --cluster=techcrumble-k8s-hardway --user=tc-admin
-      - name: use context
-        command: kubectl config use-context tc-k8s-cluster
+- name: setting up kubeconfig
+  shell: |
+    kubectl config set-cluster techcrumble-k8s-hardway --certificate-authority=/var/lib/kubernetes/ca.pem --embed-certs=true --server=https://localhost:6443
+    kubectl config set-credentials tc-admin --client-certificate=/var/lib/kubernetes/admin.pem --client-key=/var/lib/kubernetes/admin-key.pem
+    kubectl config set-context tc-k8s-cluster --cluster=techcrumble-k8s-hardway --user=tc-admin
+    kubectl config use-context tc-k8s-cluster
