--- a/roles/cni/tasks/kubeconfig.yaml
+++ b/roles/cni/tasks/kubeconfig.yaml
@@ -1,6 +1,6 @@
 - name: setting up kubeconfig
   shell: |
-    kubectl config set-cluster techcrumble-k8s-hardway --certificate-authority=/var/lib/kubernetes/ca.pem --embed-certs=true --server=https://localhost:6443 --kubeconfig=/root/.kube/config
-    kubectl config set-credentials tc-admin --client-certificate=/var/lib/kubernetes/admin.pem --client-key=/var/lib/kubernetes/admin-key.pem --kubeconfig=/root/.kube/config
-    kubectl config set-context tc-k8s-cluster --cluster=techcrumble-k8s-hardway --user=tc-admin --kubeconfig=/root/.kube/config
-    kubectl config use-context tc-k8s-cluster --kubeconfig=/root/.kube/config
+    kubectl config set-cluster techcrumble-k8s-hardway --certificate-authority=/var/lib/kubernetes/ca.pem --embed-certs=true --server=https://localhost:6443 --kubeconfig="{{ kubeconfig }}"
+    kubectl config set-credentials tc-admin --client-certificate=/var/lib/kubernetes/admin.pem --client-key=/var/lib/kubernetes/admin-key.pem --kubeconfig="{{ kubeconfig }}"
+    kubectl config set-context tc-k8s-cluster --cluster=techcrumble-k8s-hardway --user=tc-admin --kubeconfig="{{ kubeconfig }}"
+    kubectl config use-context tc-k8s-cluster --kubeconfig="{{ kubeconfig }}"
