--- a/roles/cni/defaults/main.yml
+++ b/roles/cni/defaults/main.yml
@@ -5,3 +5,4 @@ pod_cidr: 10.200.0.0/16
 typha_count: 1
 system_anonymous: "true"
 calicoctl_url: "https://github.com/projectcalico/calicoctl/releases/download/v3.16.5/calicoctl"
+kubeconfig: /root/.kube/config
